--- a/themes/motiv/pages/zapis.htm
+++ b/themes/motiv/pages/zapis.htm
@@ -6,5 +6,9 @@ is_hidden = 0
 [blogPost]
 slug = "{{ :slug }}"
 categoryPage = 404
+
+[commentsPost]
 ==
 {% component 'blogPost' %}
+
+{% component 'commentsPost' %}
