--- a/themes/motiv/pages/home.htm
+++ b/themes/motiv/pages/home.htm
@@ -10,5 +10,11 @@ noPostsMessage = "Записей не найдено"
 sortOrder = "published_at desc"
 categoryPage = 404
 postPage = "zapis"
+
+[slider]
+listPage = "{{ \"\" }}"
+
 ==
+{% component 'slider' %}
+
 {% component 'blogPosts' %}
